crates/budget_core/tests/snapshots/navigation_wizard_tests__account_add_wizard_launches.snap
---
source: tests/navigation_wizard_tests.rs
assertion_line: 34
expression: output.stdout
---
✔ Automatically loaded last ledger `WizardLedger`.
⮞ Main menu
────────────────────────────────────────────────────────────────────────
ledger: WizardLedger ⮞

    Ledger       Ledger operations (new, load, save, backup, restore...)
  > Account      Manage accounts via wizard flows
    Category     Manage categories and budgets
    Transaction  Manage transactions via wizard flows
    Simulation   Manage simulations and what-if scenarios
    Forecast     Forecast upcoming activity
    List         List accounts, categories, transactions, simulations...
    Summary      Show ledger summary
    Config       Global CLI preferences
    Help         Show available commands
    Version      Show build metadata
    Exit         Exit the shell
────────────────────────────────────────────────────────────────────────
(Use arrow keys to navigate, Enter to select, ESC to exit)
⮞ account menu
────────────────────────────────────────────────────
ledger: WizardLedger ⮞

  > Add     Add an account
    Edit    Edit an account
    Remove  Remove an account
    List    List accounts
    Show    Show account details
────────────────────────────────────────────────────
Use ↑ ↓ to navigate, Enter to select, ESC to return.
ledger: WizardLedger ⮞

=== === Step 1 of 5 – Account name === ===
Type a value and press Enter to continue. Press ESC to cancel the wizard. Type :help for details or :clear to remove the current value.
⮞ Step 1 / 5 — Account name
────────────────────────────────────────

Account creation cancelled.
⮞ Main menu
────────────────────────────────────────────────────────────────────────
ledger: WizardLedger ⮞

  > Ledger       Ledger operations (new, load, save, backup, restore...)
    Account      Manage accounts via wizard flows
    Category     Manage categories and budgets
    Transaction  Manage transactions via wizard flows
    Simulation   Manage simulations and what-if scenarios
    Forecast     Forecast upcoming activity
    List         List accounts, categories, transactions, simulations...
    Summary      Show ledger summary
    Config       Global CLI preferences
    Help         Show available commands
    Version      Show build metadata
    Exit         Exit the shell
────────────────────────────────────────────────────────────────────────
(Use arrow keys to navigate, Enter to select, ESC to exit)
Exiting shell.
